Generate types
