# api/openapi.v1.yaml
@@ -408,6 +408,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ImageList'
+        '400':
+          $ref: "#/components/responses/BadRequest"
+        '401':
+          $ref: "#/components/responses/Unauthorized"
+        '404':
+          $ref: "#/components/responses/NotFound"
+        '500':
+          $ref: "#/components/responses/InternalError"
       security:
         - BearerAuth: []
     parameters:
@@ -789,15 +797,16 @@ components:
       type: object
       required:
         - id
+        - productId
         - name
-        - originalName
       properties:
         id:
           type: integer
           format: int64
+        productId:
+          type: integer
+          format: int64
         name:
-          type: string
-        originalName:
           type: string
 
     ImageList:
